<resources>
    <string name="app_name">Flashcards</string>
    <string name="learn_message">Learn</string>
    <string name="decks_message">Decks</string>
    <string name="new_flashcard_message">New Flashcard</string>
    <string name="active_decks_message">Active Decks</string>
    <string name="easy_message">Easy</string>
    <string name="medium_message">Medium</string>
    <string name="hard_message">Hard</string>
    <string name="finished_learing_message">No more flashcards to learn</string>
    <string name="front_card_message">Front</string>
    <string name="back_card_message">Back</string>
    <string name="add_button_message">Add</string>
    <string name="select_deck_message">Select Deck</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_deck_button">Add deck</string>
    <string name="edit_deck_name">Deck name</string>
    <string name="add">Add</string>
    <string name="delete_deck_button_description">Delete deck button</string>
    <string name="add_card_button">Add card</string>
    <string name="congrats_message">Congratulations!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="no_more_decks">No more decks to learn</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="share">Share</string>
    <string name="available_devices">Available devices</string>
    <string name="your_decks">Your  decks</string>
    <string name="incorrect_symbols">Name contains incorrect symbols</string>
    <string name="name_in_use">Name is already in use</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="statistics_message">Daily statistics</string>

</resources>