<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/learnDeckConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.learn.LearnDeckFragment">

    <Button
        android:id="@+id/easy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_message"
        app:layout_constraintBaseline_toBaselineOf="@+id/medium_button"
        app:layout_constraintEnd_toStartOf="@+id/medium_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hard_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/easy_button"
        app:layout_constraintTop_toBottomOf="@+id/learn_back" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/hard_message"
        app:layout_constraintBaseline_toBaselineOf="@+id/medium_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/medium_button" />

    <TextView
        android:id="@+id/learn_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/front_card_message"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/learn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/learn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_card_message"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/medium_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learn_front" />
</androidx.constraintlayout.widget.ConstraintLayout>