<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="showAnswer"
    tools:context=".LearnDeckActivity">


    <TextView
        android:id="@+id/flashcard_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/flashcard_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/flashcard_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/medium_button_old"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcard_front" />

    <Button
        android:id="@+id/medium_button_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reactMediumAnswer"
        android:text="@string/medium_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hard_button_old"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/easy_button_old"
        app:layout_constraintTop_toBottomOf="@+id/flashcard_back" />

    <Button
        android:id="@+id/easy_button_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reactEasyAnswer"
        android:text="@string/easy_message"
        app:layout_constraintBaseline_toBaselineOf="@+id/medium_button_old"
        app:layout_constraintEnd_toStartOf="@+id/medium_button_old"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hard_button_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reactHardAnswer"
        android:text="@string/hard_message"
        app:layout_constraintBaseline_toBaselineOf="@+id/medium_button_old"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/medium_button_old" />

</androidx.constraintlayout.widget.ConstraintLayout>